# Vending_Machine

./: .cproject  .project  CMakeLists.txt  README.md  buildme.sh
scripts/: styling.sh
src/: HasMoneyState.cpp  IVendingMachineView.h  IdleState.cpp  IdleState.h  Product.cpp  Product.h  VendingMachine.cpp  VendingMachine.h  VendingMachineErrorCode.h  VendingMachinePresenter.cpp  VendingMachineState.h  main  main.cpp
src/model/: VendingMachine.cpp  VendingMachine.h
src/model/states/: HasMoneyState.h  LockState.cpp  LockState.h  ProductSelectedState.h  VendingMachineState.h
src/presenter/: VendingMachinePresenter.h
src/states/: HasMoneyState.cpp  HasMoneyState.h  IdleState.cpp  IdleState.h  LockState.cpp  LockState.h  LockedState.cpp  LockedState.hpp  ProductSelectedState.cpp  ProductSelectedState.h  VendingMachineState.cpp  VendingMachineState.h
src/view/: CommandLineVendingMachineView.cpp  CommandLineVendingMachineView.h  IVendingMachine.h
test/: HasMoneyStateTest.cpp  IdleStateTest.cpp  LockStateTest.cpp  MockState.h  MockVendingMachine.h  ProductSelectedStateTest.cpp  ProductTest.cpp  VendingMachineIntegrationTest.cpp  VendingMachineTest.cpp  main.cpp
